pyReScene 0.5 (2013-03-)
=============

 * ReScene: initialization bug fixed (compressed RARs issue)
 * ReScene: choosing correct dictionary size while reconstructing
 * ReScene: able to reconstruct RAR 2.0x archives
 * ReScene: solid archives fix (threading issue)
 * ReScene: fix for archives larger than 4GB
 * ReScene: support for compression failure from RELOADED
            (larger packed size than unpacked size)
 * ReScene: provided -t folder does not need to be empty
 * ReSample: fixed KeyError on sample reconstruction
 * ReSample: -m option added to prevent using stored match offsets
 * pyReScene Auto: DVDx and DISCx subfolders added
 * preprardir.py: bug with copying license file on Linux fixed

pyReScene 0.4 (2013-02-28)
=============

 * pyReScene Auto: Fixing.Frank.2002.DVDRip.XviD-EXViD srr could not create
 * pyReScene Auto: infinite loop on The.Haunting.1963.DVDRip.XviD-FRAGMENT
 * pyReScene Auto: OS X issue fixed
 * pyReScene Auto: more subfolder detection fixes
 * pyReScene Auto: only store proof RAR files when they contain image files
 * ReSample: No sample recreation for MKV files with attachments (bug #2)
 * ReSample: Die.Simpsons.S04E02.....iNTERNAL-UTOPiA
   main AVI file with multiple audio tracks: the sample could not rebuild
 * ReSample: ASAP MP4 sample failed reconstruction
 * ReScene: Reconstruction support for compressed RAR files!
 * ReScene: -t switch to choose your own (empty) temporary directory
 
pyReScene 0.3 (2013-02-07)
=============

 * pyReScene Auto: -l parameter added to report sample issues
 * pyReScene Auto: CD1.srr files were created in certain cases
 * pyReScene Auto: Subservience.2007.BDRip.XviD-DOCUMENT wasn't detected
   as a release
 * pyReScene Auto: -c flag works again
 * pyReScene Auto: FIX-release inside release dir made it fail
 * ReScene: -e output bug for RAR end block fixed

pyReScene 0.2 (2013-02-05)
=============

 * ReScene: OpenSubtitles.org hashes are stored while creating SRR files